--- a/gvr-remote-scripting/res/layout/main.xml
+++ b/gvr-remote-scripting/res/layout/main.xml
@@ -13,7 +13,9 @@
             android:id="@+id/editor"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:lines="12"
+            android:lines="9"
+            android:textSize="30sp"
+            android:textColor="#FF00F000"
             android:text="importPackage(org.gearvrf);\nimportPackage(org.gearvrf.scene_objects);\n\nvar scene = gvrf.getMainScene();\n"
             />
         <TextView
@@ -21,6 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Update"
+            android:textSize="24sp"
             android:background="#005000"
             android:padding="10dp"
             android:layout_below="@id/editor"
